fix safari issue with membership card text alignment; set max width to form and width of membership card component

--- a/web/wp-content/themes/onelove/assets/scss/layout/_membership_card.scss
+++ b/web/wp-content/themes/onelove/assets/scss/layout/_membership_card.scss
@@ -11,7 +11,9 @@ div.membership-card {
   border-radius: .5625rem;
   max-width: 300px;
   margin: 0 auto;
-  margin-right: 0;
+  @include breakpoint(medium) {
+    margin-right: 0;
+  }
   .membership-card-section-background {
     position: relative;
   }
@@ -20,6 +22,8 @@ div.membership-card {
     width: 50%;
     margin-right: 0;
     padding-left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
     * {
       font-size: 4vw;
       line-height: normal;
@@ -31,7 +35,7 @@ div.membership-card {
   section {
     text-overflow: ellipsis;
     &:not(:first-child) {
-      margin-top: $default-spacing;
+      margin-top: 1.5rem;
     }
   }
   * {
@@ -63,6 +67,7 @@ div.vc-membership-card {
   width: 100%;
   justify-content: space-around;
   flex-direction: column;
+  max-width: 49.125rem;
   @include breakpoint(medium) {
     flex-direction: row;
   }
